// Proto definition for the A2A (Agent-to-Agent) protocol service.
// Maps to the types defined in internal/protocol/types.go.
syntax = "proto3";

package a2a.v1;

option go_package = "github.com/vivars7/a2a-sentinel/gen/a2a/v1;a2av1";

import "google/protobuf/struct.proto";

// A2AService defines the gRPC binding for the A2A protocol.
service A2AService {
  // SendMessage sends a message to an agent and returns a task.
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  // StreamMessage sends a message and returns a stream of events.
  rpc StreamMessage(SendMessageRequest) returns (stream StreamEvent);
  // GetTask retrieves the current state of a task by ID.
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
  // CancelTask cancels a running task.
  rpc CancelTask(CancelTaskRequest) returns (CancelTaskResponse);
  // SetPushNotificationConfig configures push notifications for a task.
  rpc SetPushNotificationConfig(SetPushNotifRequest) returns (PushNotificationConfig);
  // GetPushNotificationConfig retrieves push notification settings for a task.
  rpc GetPushNotificationConfig(GetPushNotifRequest) returns (PushNotificationConfig);
}

// ── Message Types ──

// Part represents a message part (text, file, or data).
message Part {
  string type = 1;
  string text = 2;
  FileContent file = 3;
  google.protobuf.Struct data = 4;
  google.protobuf.Struct metadata = 5;
}

// FileContent represents file data in a message part.
message FileContent {
  string name = 1;
  string mime_type = 2;
  string bytes = 3;
  string uri = 4;
}

// Message represents an A2A message exchanged between agents.
message Message {
  string role = 1;
  repeated Part parts = 2;
  string message_id = 3;
  google.protobuf.Struct metadata = 4;
}

// Artifact represents a task output artifact.
message Artifact {
  string artifact_id = 1;
  string name = 2;
  string description = 3;
  repeated Part parts = 4;
  int32 index = 5;
  optional bool append = 6;
  optional bool last_chunk = 7;
  google.protobuf.Struct metadata = 8;
}

// ── Task Types ──

// TaskStatus represents the current status of a task.
message TaskStatus {
  string state = 1;
  Message message = 2;
  string timestamp = 3;
}

// Task represents an A2A task.
message Task {
  string id = 1;
  string session_id = 2;
  TaskStatus status = 3;
  repeated Message history = 4;
  repeated Artifact artifacts = 5;
  google.protobuf.Struct metadata = 6;
}

// ── Push Notification Types ──

// PushNotificationAuthenticationInfo holds auth info for push callbacks.
message PushNotificationAuthenticationInfo {
  repeated string schemes = 1;
  string credentials = 2;
}

// PushNotificationConfig holds push notification settings.
message PushNotificationConfig {
  string url = 1;
  string token = 2;
  PushNotificationAuthenticationInfo authentication = 3;
}

// ── Request/Response Types ──

// SendMessageConfiguration holds configuration for a send request.
message SendMessageConfiguration {
  repeated string accepted_output_modes = 1;
  optional bool blocking = 2;
  optional int32 history_length = 3;
  PushNotificationConfig push_notification_config = 4;
}

// SendMessageRequest is the payload for SendMessage and StreamMessage RPCs.
message SendMessageRequest {
  Message message = 1;
  SendMessageConfiguration configuration = 2;
  google.protobuf.Struct metadata = 3;
}

// SendMessageResponse wraps the task returned by SendMessage.
message SendMessageResponse {
  Task task = 1;
}

// GetTaskRequest identifies a task to retrieve.
message GetTaskRequest {
  string task_id = 1;
  optional int32 history_length = 2;
}

// GetTaskResponse wraps the task returned by GetTask.
message GetTaskResponse {
  Task task = 1;
}

// CancelTaskRequest identifies a task to cancel.
message CancelTaskRequest {
  string task_id = 1;
}

// CancelTaskResponse wraps the task returned by CancelTask.
message CancelTaskResponse {
  Task task = 1;
}

// SetPushNotifRequest sets push notification config for a task.
message SetPushNotifRequest {
  string task_id = 1;
  PushNotificationConfig config = 2;
}

// GetPushNotifRequest retrieves push notification config for a task.
message GetPushNotifRequest {
  string task_id = 1;
}

// ── Streaming Event Types ──

// TaskStatusUpdateEvent is sent when a task's status changes.
message TaskStatusUpdateEvent {
  string id = 1;
  TaskStatus status = 2;
  bool final = 3;
  google.protobuf.Struct metadata = 4;
}

// TaskArtifactUpdateEvent is sent when an artifact is updated.
message TaskArtifactUpdateEvent {
  string id = 1;
  Artifact artifact = 2;
  google.protobuf.Struct metadata = 3;
}

// StreamEvent is a union of streaming event types.
message StreamEvent {
  oneof event {
    TaskStatusUpdateEvent status_update = 1;
    TaskArtifactUpdateEvent artifact_update = 2;
  }
}
